# software-3d-basics

./: CMakeLists.txt  README.md  vcpkg.json
Assimp/: CMakeLists.txt
Assimp/src/: lines.cpp  main.cpp
ClipSpace/: CMakeLists.txt
ClipSpace/src/: main.cpp
LocalSpace/: CMakeLists.txt
LocalSpace/src/: lines.cpp  main.cpp
Matrices/: CMakeLists.txt
Matrices/include/: Mesh.h
Matrices/src/: main.cpp
Static2D/: CMakeLists.txt
Static2D/src/: main.cpp
Vertex3D/: CMakeLists.txt
Vertex3D/src/: main.cpp
ViewSpace/: CMakeLists.txt
ViewSpace/src/: main.cpp
WorldSpace/: CMakeLists.txt
WorldSpace/src/: main.cpp
